# NewsFlow

./: .gitignore  Makefile  config.toml  config.yml  env.example  fetch_rss.py  package.json  pyproject.toml
.github/workflow/: fetch.yaml
.github/workflows/: fetch.yaml  fetch.yml  frontend.yml
NewsFlowFrontend/: .eslintrc.cjs  .eslintrc.js  .prettierignore  .prettierrc  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  svelte.config.ts  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.mjs  vite.config.ts  vitest.config.ts  vitest.config.ts.timestamp-1722866198994.js
NewsFlowFrontend/public/: index.html
NewsFlowFrontend/src/: App.svelte
NewsFlowFrontend/src/components/: ConfigDialog.svelte
NewsFlowFrontend/src/tests/: App.test.ts  ConfigDialog.test.ts
assets/: index-B2pBgmyB.js  index-C1RnZPPU.css
public/: index.html
